Debug modal issue on mobile

--- a/app/page.module.css
+++ b/app/page.module.css
@@ -59,9 +59,9 @@
   min-width: 330px !important;
   width: 40vw !important;
   position: fixed !important;
-  left: 50% !important;
-  top: 50% !important;
-  transform: translate(-50%, -50%) !important;
+  left: calc(50% - 20vw) !important;
+  top: calc(50% - 20vw) !important;
+  /* transform: translate(-50%, -50%) !important; */
   aspect-ratio: 1 !important;
 }
 .footer {
